Upgrade to gwt 2.7.0